--- a/index.html
+++ b/index.html
@@ -1,28 +1,99 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Adam Hite</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Adam Hite!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Adam Hite | Front-End Developer | Austin, TX</title>
+        <meta name="description" content="I am an Austin-based front-end developer who likes writing clean code and making websites load really fast.">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="apple-touch-icon" href="icon.png">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <section class="section1">
+                <h1>Adam Hite</h1>
+                <p>I am a front-end developer living in Austin, TX who likes writing clean code and making websites load really fast.</p>
+            </section>
+        </header>
+        <main>
+            <section class="section2">
+                <div class="first"></div>
+                <div class="second">
+                    <h4>Hey Y'all!</h4>
+                    <p>I am a lead digital developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through nearly a decade of professional experience in development and&nbsp;design.</p>
+                    <p>When I am not behind a computer screen, I spend my time with my partner and our two pups. I enjoy bike polo, mountain biking, bike camping, hiking, backpacking and ping-pong. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Assocation</a>.</p>
+                </div>
+            </section>
+            <section class="section3">
+                <h2>Recent Work</h2>
+                <ul class="work-grid">
+                    <li>
+                        <a href="img/work1.jpg"><img src="img/work1-th.jpg" width="500" height="260" alt=""></a>
+                        <h3>The Balega Difference</h3>
+                        <p>experiential site</p>
+                    </li>
+                    <li>
+                        <a href="img/work2.jpg"><img src="img/work2-th.jpg" width="500" height="260" alt=""></a>
+                        <h3>Advisor Complete</h3>
+                        <p>dashboard</p>
+                    </li>
+                    <li>
+                        <a href="//palmbeachtan.com"><img src="img/work3-th.jpg" width="500" height="260" alt=""></a>
+                        <h3>Palm Beach Tan</h3>
+                        <p><a href="//palmbeachtan.com">palmbeachtan.com</a></p>
+                        <p>website</p>
+                    </li>
+                    <li>
+                        <a href="//kestrafinancial.com"><img src="img/work4-th.jpg" width="500" height="260" alt=""></a>
+                        <h3>Kestra Financial</h3>
+                        <p><a href="//kestrafinancial.com">kestrafinancial.com</a></p>
+                        <p>website</p>
+                    </li>
+                    <li>
+                        <a href="//tortillabendita.com"><img src="img/work5-th.jpg" width="500" height="260" alt=""></a>
+                        <h3>Tortilla Bendita</h3>
+                        <p><a href="//tortillabendita.com">tortillabendita.com</a></p>
+                        <p>web app</p>
+                    </li>
+                    <li>
+                        <a href="//lighthouse.insurance"><img src="img/work6-th.jpg" width="500" height="260" alt=""></a>
+                        <h3>Lighthouse Insurance</h3>
+                        <p><a href="//lighthouse.insurance">lighthouse.insurance</a></p>
+                        <p>website</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="section4">
+                <h2>Recommendations</h2>
+                <ul class="recommend-list">
+                    <li>
+                        <h4>David Sparks</h4>
+                        <p>UX, UI, and Usability Specialist - Archer Malmo</p>
+                        <p>I've seen Adam grow from designing band posters to being a world class front end developer. He has demonstrated a commitment to his craft with meticulous attention to detail, especially in the mobile environment where he has made speed a top priority in the code he creates. He was one of the key developers at Archer Malmo that helped our digital team transition into a mobile first philosophy and approach, both in terms of technical how-to and why it's important.</p>
+                        <p>He's a hard worker who understands the power and limits of front end technologies and is instrumental in helping creatives realize their designs in a digital space.</p>
+                    </li>
+                    <li>
+                        <h4>Wil Gatlin</h4>
+                        <p>Senior Technical Consultant - DEV/CON</p>
+                        <p>Adam is an award-winning top-notch developer, teammate and all around great guy to work with. He stays consistently up on the cutting edge trends in front end development and integrates them seamlessly into his thoughtful and clean style that you come to rely on as dependable and well built, as well as beautiful and highly functional. He's also a great leader, able to teach and show others the way to solve problems and create web solutions at the highest level. I can't recommend Adam enough.</p>
+                        <p>We worked together in Memphis for several years before he moved to Austin to help the team there and we instantly became friends as he's not only an extremely talented developer but just a fun dude to hang around with. Would jump at the opportunity to work with him again as I know he cares about the work and will always create a great product.</p>
+                    </li>
+                    <li>
+                        <h4>Joel Gulledge</h4>
+                        <p>Manager of Digital QA, Email Marketing - Archer Malmo</p>
+                        <p>Need a seasoned front-end dev with leadership experience? For over five years, I've had the privilege to work next to Adam. He's an exceptional collaborator who continually pushes for better design practices in the digital sphere. Adam is always willing to take the time to teach others regardless of their department; a solid mentor for his direct report.</p>
+                        <p>Adam has a positive attitude and is always dependable. As QA lead, I'm always happy when a deliverable comes to my team that Adam has been apart of - his work is always thorough, and the attention to detail shines through no matter how large a project.</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <p class="footer-links"><a href="mailto:adamchristopherhite@gmail.com">Contact</a> | <a href="//dropbox.com/s/yhoxtxl7n4ypkzw/resume-adamhite.pdf?dl=0">Resume</a> | <a href="//linkedin.com/in/adam-hite">LinkedIn</a></p>
+            <p class="small">Copyright © 2018 Adam Hite</p>
+        </footer>
+    </body>
 </html>
