removed the color

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="section4">
+            <!-- <section class="section4">
                 <h2>Recommendations</h2>
                 <ul class="recommend-list">
                     <li>
@@ -89,7 +89,7 @@
                         <p>Adam has a positive attitude and is always dependable. As QA lead, I'm always happy when a deliverable comes to my team that Adam has been apart of - his work is always thorough, and the attention to detail shines through no matter how large a project.</p>
                     </li>
                 </ul>
-            </section>
+            </section> -->
         </main>
         <footer>
             <p class="footer-links"><a href="mailto:adamchristopherhite@gmail.com">Contact</a> | <a href="//dropbox.com/s/yhoxtxl7n4ypkzw/resume-adamhite.pdf?dl=0">Resume</a> | <a href="//linkedin.com/in/adam-hite">LinkedIn</a></p>
