--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
         <title>Adam Hite | Front-End Developer | Austin, TX</title>
         <meta name="description" content="I am an Austin-based front-end developer who likes writing clean code and making websites load really fast.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="apple-touch-icon" href="icon.png">
-        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#e3551d">
+        <meta name="msapplication-TileColor" content="#e3551d">
+        <meta name="theme-color" content="#ffffff">
         <link rel="stylesheet" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
     </head>
