web font loader

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <meta name="msapplication-TileColor" content="#e3551d">
         <meta name="theme-color" content="#ffffff">
         <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -77,5 +76,13 @@
             <p class="footer-links"><a href="//dropbox.com/s/yhoxtxl7n4ypkzw/resume-adamhite.pdf?dl=0">Resume</a> | <a href="//linkedin.com/in/adam-hite">LinkedIn</a></p>
             <p class="small">Copyright © 2018 Adam Hite</p>
         </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+        <script>
+          WebFont.load({
+            google: {
+              families: ['Libre Baskerville', 'Open Sans']
+            }
+          });
+        </script>
     </body>
 </html>
