--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="second">
                     <h4>Hey Y'all!</h4>
                     <p>I work as a lead digital developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through nearly a decade of professional experience in development and&nbsp;design.</p>
-                    <p>I understand the importance of a fast website or application that performs well on whatever device is being used.</p>
+                    <p>I understand the importance of a fast website or web application that performs well on whatever device is being used.</p>
                     <p>In my free time I enjoy traveling, competing in bike polo tournaments, bike camping, and hiking with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Assocation</a>.</p>
                 </div>
             </section>
