--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                         <p>web app</p>
                     </li>
                     <li>
-                        <a href="//lighthouse.insurance"><img src="img/work6-th.jpg" width="500" height="260" alt=""></a>
-                        <h3>Lighthouse Insurance</h3>
-                        <p><a href="//lighthouse.insurance">lighthouse.insurance</a></p>
+                        <a href="//whbpc.org"><img src="img/work6-th.jpg" width="500" height="260" alt=""></a>
+                        <h3>2017 World Hardcourt Bike Polo Championship</h3>
+                        <p><a href="//whbpc.org">whbpc.org</a></p>
                         <p>website</p>
                     </li>
                 </ul>
