--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li>
                         <a href="img/work2.jpg"><img src="img/work2-th.jpg" width="500" height="260" alt=""></a>
                         <h3>Advisor Complete</h3>
-                        <p>dashboard</p>
+                        <p>web app</p>
                     </li>
                     <li>
                         <a href="//palmbeachtan.com"><img src="img/work3-th.jpg" width="500" height="260" alt=""></a>
