--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Adam Hite | Front-End Developer | Austin, TX</title>
-        <meta name="description" content="I am an Austin-based front-end developer who likes writing clean code and making websites load really fast.">
+        <meta name="description" content="I am an Austin-based front-end developer who likes building fast, accessible, responsive websites.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -19,7 +19,7 @@
         <header>
             <section class="section1">
                 <h1>Adam Hite</h1>
-                <p>I am a front-end developer living in Austin, TX who likes writing clean code and making websites load really fast.</p>
+                <p>I am a front-end developer living in Austin, TX who likes building fast, accessible, responsive websites.</p>
             </section>
         </header>
         <main>
@@ -28,8 +28,8 @@
                 <div class="second">
                     <h4>Hey Y'all!</h4>
                     <p>I work as a lead digital developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through nearly a decade of professional experience in development and&nbsp;design.</p>
-                    <p>I understand the importance of a fast website or web application that performs well on whatever device is being used.</p>
-                    <p>In my free time I enjoy traveling, competing in bike polo tournaments, bike camping, and hiking with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Assocation</a>.</p>
+                    <p>I understand the importance of a fast website or web application that performs well on whatever device is being used and is accessible by all.</p>
+                    <p>In my free time I enjoy traveling, cooking, riding my bike, and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Assocation</a>.</p>
                 </div>
             </section>
             <section class="section3">
