--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </li>
                     <li>
                         <a href="img/work2.jpg"><img src="img/work2-th.jpg" width="500" height="260" alt=""></a>
-                        <h3>Advisor Complete</h3>
+                        <h3>Kestra Advisor Complete</h3>
                         <p>dashboard</p>
                     </li>
                     <li>
