--- a/index.html
+++ b/index.html
@@ -27,23 +27,30 @@
                 <div class="first"></div>
                 <div class="second">
                     <h4>Hey Y'all!</h4>
-                    <p>I work as a lead digital developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through nearly a decade of professional experience in development and&nbsp;design.</p>
-                    <p>I understand the importance of a fast website or web application that performs well on whatever device is being used and is accessible by all.</p>
-                    <p>In my free time I enjoy traveling, cooking, riding my bike, and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Assocation</a>.</p>
+                    <p>I work as a lead digital developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through a decade of professional experience in development and&nbsp;design.</p>
+                    <p>I understand the importance of a fast website or web application that performs well on whatever device is being used and is accessible by&nbsp;all.</p>
+                    <p>In my free time I enjoy traveling, spending time in the wilderness, riding my bike, and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Assocation</a>.</p>
                 </div>
             </section>
             <section class="section3">
                 <h2>Recent Work</h2>
                 <ul class="work-grid">
                     <li>
+                        <a href="img/work7.jpg"><img src="img/work7-th.jpg" width="500" height="260" alt=""></a>
+                        <h3>The Long Center</h3>
+                        <a href="//thelongcenter.org">balega-socks.implus.com/the-balega-socks-difference</a>
+                        <p>website</p>
+                    </li>
+                    <li>
                         <a href="img/work1.jpg"><img src="img/work1-th.jpg" width="500" height="260" alt=""></a>
                         <h3>The Balega Difference</h3>
+                        <a href="//balega-socks.implus.com/the-balega-socks-difference">balega-socks.implus.com/the-balega-socks-difference</a>
                         <p>experiential site</p>
                     </li>
                     <li>
                         <a href="img/work2.jpg"><img src="img/work2-th.jpg" width="500" height="260" alt=""></a>
                         <h3>Kestra Financial Advisor Complete</h3>
-                        <p>dashboard</p>
+                        <p>user interface</p>
                     </li>
                     <li>
                         <a href="//palmbeachtan.com"><img src="img/work3-th.jpg" width="500" height="260" alt=""></a>
@@ -56,12 +63,6 @@
                         <h3>Kestra Financial</h3>
                         <p><a href="//kestrafinancial.com">kestrafinancial.com</a></p>
                         <p>website</p>
-                    </li>
-                    <li>
-                        <a href="//tortillabendita.com"><img src="img/work5-th.jpg" width="500" height="260" alt=""></a>
-                        <h3>Tortilla Bendita</h3>
-                        <p><a href="//tortillabendita.com">tortillabendita.com</a></p>
-                        <p>web app</p>
                     </li>
                     <li>
                         <a href="//whbpc.org"><img src="img/work6-th.jpg" width="500" height="260" alt=""></a>
