--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                     <li>
                         <a href="img/work7.jpg"><img src="img/work7-th.jpg" width="500" height="260" alt=""></a>
                         <h3>The Long Center</h3>
-                        <a href="//thelongcenter.org">balega-socks.implus.com/the-balega-socks-difference</a>
+                        <a href="//thelongcenter.org">thelongcenter.org</a>
                         <p>website</p>
                     </li>
                     <li>
                         <a href="img/work1.jpg"><img src="img/work1-th.jpg" width="500" height="260" alt=""></a>
                         <h3>The Balega Difference</h3>
-                        <a href="//balega-socks.implus.com/the-balega-socks-difference">balega-socks.implus.com/the-balega-socks-difference</a>
+                        <a href="//balega-socks.implus.com/the-balega-socks-difference">balega-socks.implus.com</a>
                         <p>experiential site</p>
                     </li>
                     <li>
