--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 <div class="second">
                     <h4>Hey Y'all!</h4>
                     <p>I work as a lead digital developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through a decade of professional experience in development and&nbsp;design.</p>
-                    <p>I understand the importance of a fast website or web application that performs well on whatever device/screen size and is accessible by&nbsp;all.</p>
-                    <p>"Front-End Developer" can mean a lot of things to different people. I identify more as a <em>UX Engineer</em> rather than a <em>JavaScript engineer</em>. I'm stuck somewhere in the middle of design and programming. As of late, my focus has been more on JavaScript and A11y.</p>
+                    <p>I understand the importance of a fast website or web application that performs well on whatever device/screen size and is accessible by&nbsp;all.</p>s
                     <p>In my free time I enjoy traveling, exploring the wilderness, riding a bicycle, and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Assocation</a>.</p>
                 </div>
             </section>
