--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Adam Hite | Front-End Developer | Austin, TX</title>
         <meta name="description" content="I am an Austin-based front-end developer who believes in building fast, accessible, responsive websites.">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -28,8 +28,8 @@
                 <div class="second">
                     <h4>Hey Y'all!</h4>
                     <p>I work as a lead digital developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through a decade of professional experience in development and&nbsp;design.</p>
-                    <p>I understand the importance of a fast website or web application that performs well on whatever device/screen size and is accessible by&nbsp;all.</p>
-                    <p>In my free time I enjoy traveling, exploring the wilderness, riding a bicycle, and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Assocation</a>.</p>
+                    <p>I understand the importance of a fast website or web application that performs well on whatever device/screen size. I am aware of my privilege of having access to high-speed internet and powerful devices to access the web and strive to make everything that I build accessible to those who don't.</p>
+                    <p>In my free time I enjoy traveling, exploring the wilderness, riding a bicycle, and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a>.</p>
                 </div>
             </section>
             <section class="section3">
@@ -75,29 +75,12 @@
         </main>
         <footer>
             <p class="footer-links"><a href="//dropbox.com/s/yhoxtxl7n4ypkzw/resume-adamhite.pdf?dl=0">Resume</a> | <a href="//linkedin.com/in/adam-hite">LinkedIn</a></p>
-            <p class="small">Copyright © 2018 Adam Hite</p>
+            <p class="small">Copyright &copy;2018 Adam Hite</p>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script>
-          WebFont.load({
-            google: {
-              families: ['Libre Baskerville', 'Open Sans']
-            }
-          });
-        </script>
-        <script>var cb = function() {
-        var l = document.createElement('link'); l.rel = 'stylesheet';
-        l.href = 'css/main.css';
-        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-        };
-        var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-        webkitRequestAnimationFrame || msRequestAnimationFrame;
-        if (raf) raf(cb);
-        else window.addEventListener('load', cb);</script>
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-115746549-1','auto');ga('send','pageview')
-        </script>
+        <script>WebFont.load({google: {families: ['Libre Baskerville', 'Open Sans']}});</script>
+        <script>var cb = function() {var l = document.createElement('link'); l.rel = 'stylesheet';l.href = 'css/main.css';var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);};var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;if (raf) raf(cb);else window.addEventListener('load', cb);</script>
+        <script>window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;ga('create','UA-115746549-1','auto');ga('send','pageview')</script>
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
 </html>
