--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Adam Hite | Front-End Developer | Austin, TX</title>
-        <meta name="description" content="I am an Austin-based front-end developer who believes in building fast, accessible, responsive websites.">
+        <meta name="description" content="I am an Austin-based front-end developer who believes in building fast, accessible, and responsive websites.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -19,7 +19,7 @@
         <header>
             <section class="section1">
                 <h1>Adam Hite</h1>
-                <p>I am a front-end developer living in Austin, TX who believes in building fast, accessible, responsive websites.</p>
+                <p>I am a front-end developer living in Austin, TX who believes in building fast, accessible, and responsive websites.</p>
             </section>
         </header>
         <main>
