--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 <h2>Recent Work</h2>
                 <ul class="work-grid">
                     <li>
-                        <a href="img/work7.jpg"><img src="img/work7-th.jpg" width="500" height="260" alt=""></a>
+                        <a href="//thelongcenter.org"><img src="img/work7-th.jpg" width="500" height="260" alt=""></a>
                         <h3>The Long Center</h3>
                         <a href="//thelongcenter.org">thelongcenter.org</a>
                         <p>website</p>
                     </li>
                     <li>
-                        <a href="img/work1.jpg"><img src="img/work1-th.jpg" width="500" height="260" alt=""></a>
+                        <a href="//balega-socks.implus.com/the-balega-socks-difference"><img src="img/work1-th.jpg" width="500" height="260" alt=""></a>
                         <h3>The Balega Difference</h3>
                         <a href="//balega-socks.implus.com/the-balega-socks-difference">balega-socks.implus.com</a>
                         <p>experiential site</p>
