--- a/index.html
+++ b/index.html
@@ -39,36 +39,36 @@
                         <a href="//thelongcenter.org"><img src="img/work7-th.jpg" width="500" height="260" alt=""></a>
                         <h3>The Long Center</h3>
                         <a href="//thelongcenter.org">thelongcenter.org</a>
-                        <p>website</p>
+                        <p>website &mdash; <em>development &amp; animation</em></p>
                     </li>
                     <li>
                         <a href="//balega-socks.implus.com/the-balega-socks-difference"><img src="img/work1-th.jpg" width="500" height="260" alt=""></a>
                         <h3>The Balega Difference</h3>
                         <a href="//balega-socks.implus.com/the-balega-socks-difference">balega-socks.implus.com</a>
-                        <p>experiential site</p>
+                        <p>experiential site &mdash; <em>development &amp; animation</em></p>
                     </li>
                     <li>
                         <a href="img/work2.jpg"><img src="img/work2-th.jpg" width="500" height="260" alt=""></a>
                         <h3>Kestra Financial Advisor Complete</h3>
-                        <p>user interface</p>
+                        <p>user interface &mdash; <em>development</em></p>
                     </li>
                     <li>
                         <a href="//palmbeachtan.com"><img src="img/work3-th.jpg" width="500" height="260" alt=""></a>
                         <h3>Palm Beach Tan</h3>
                         <p><a href="//palmbeachtan.com">palmbeachtan.com</a></p>
-                        <p>website</p>
+                        <p>website &mdash; <em>development</em></p>
                     </li>
                     <li>
                         <a href="//kestrafinancial.com"><img src="img/work4-th.jpg" width="500" height="260" alt=""></a>
                         <h3>Kestra Financial</h3>
                         <p><a href="//kestrafinancial.com">kestrafinancial.com</a></p>
-                        <p>website</p>
+                        <p>website &mdash; <em>development</em></p>
                     </li>
                     <li>
                         <a href="//whbpc.org"><img src="img/work6-th.jpg" width="500" height="260" alt=""></a>
                         <h3>2017 World Hardcourt Bike Polo Championship</h3>
                         <p><a href="//whbpc.org">whbpc.org</a></p>
-                        <p>website</p>
+                        <p>website &mdash; <em>design &amp; development</em></p>
                     </li>
                 </ul>
             </section>
