--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <div class="second">
                     <h4>Hey Y'all!</h4>
                     <p>I work as a lead digital developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through a decade of professional experience in development and&nbsp;design.</p>
-                    <p>I understand the importance of a fast website or web application that performs well on whatever device/screen size. I am aware of my privilege of having access to high-speed internet and powerful devices to access the web and strive to make everything that I build accessible to those who don't. I am constantly researching and learning new skills.</p>
+                    <p>I understand the importance of a fast website or web application that performs well on whatever device/screen size. I am aware of my privilege of having access to high-speed internet and powerful devices to access the web and strive to make everything that I build accessible to those who don't.</p>
+                    <p>I am constantly researching and learning new skills.</p>
                     <p>In my free time I enjoy traveling, exploring the wilderness, riding a bicycle, and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a>.</p>
                 </div>
             </section>
