--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li>
                         <img src="img/work2-th.jpg" width="500" height="260" alt="screenshot of Kestra Financial Advisor Complete">
                         <h3>Kestra Financial Advisor Complete</h3>
-                        <a href="img/work2.jpg">View</a>
+                        <a href="img/work2.jpg">view screenshot</a>
                         <p>user interface &mdash; <em>development</em></p>
                     </li>
                     <li>
