--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com/">
         <meta name="msapplication-TileColor" content="#e3551d">
         <meta name="theme-color" content="#ffffff">
-        <style type="text/css"><style>html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;font-display:swap}body{margin:0 auto;max-width:1440px}header,section{display:block}h1{font-size:2em;margin:.67em 0}h2{font-size:18px}main{display:block}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:hover,a:focus{text-decoration:underline}img{border-style:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}html{box-sizing:border-box;color:#222;font-size:1em;line-height:1.4;margin:0;padding:0}*,*:before,*:after{box-sizing:inherit}img{vertical-align:middle}body{font-family:'Open Sans',sans-serif;font-size:18px;line-height:1.6;padding:0}img{height:auto;max-width:100%}a{color:#6161ff;text-decoration:none}header{background-color:#fff;padding:4rem}@media only screen and (min-width:720px){header{padding:8rem 4rem}}.section1{margin:0 auto;max-width:720px}header p{font-size:24px}h1{font-family:'Libre Baskerville',Garamond,Times New Roman,serif;font-size:48px;line-height:1.2;margin-top:0}h2{font-family:'Libre Baskerville',Garamond,Times New Roman,serif;font-size:24px}@media only screen and (min-width:720px){h2{font-size:36px}}h3{margin-bottom:0}h4{font-family:'Libre Baskerville',Garamond,Times New Roman,serif;margin-bottom:0}p{margin-top:0}.section2{display:flex;flex-direction:column;margin-bottom:2rem}@media only screen and (min-width:720px){.section2{flex-direction:row;margin-bottom:6rem}}@media only screen and (min-width:720px){.section2 .first,.section2 .second{width:50%}}.section2 .first{background:url(img/photo.jpg) no-repeat;background-position:50% 50%;background-size:cover;min-height:320px}@media only screen and (min-width:720px){.section2 .first{background-size:720px auto}}.section2 .second{padding:1rem 4rem}.section2 .second h4{margin-bottom:1rem}.section3{padding:2rem}.work-grid{list-style:none;margin:0;padding:0}.work-grid li{margin-bottom:6rem}.work-grid img{box-shadow:0 0 20px rgba(0,0,0,.2)}.work-grid p{color:#666;font-size:16px;margin-bottom:0}@media only screen and (min-width:540px){.work-grid{display:flex;flex-wrap:wrap}.work-grid li{margin-bottom:2rem;padding:1rem;width:50%}}@media only screen and (min-width:720px){.work-grid li{width:33.333%}}footer{padding:3rem 1rem 4rem;text-align:center}footer .small{font-size:14px;color:#666}</style></style>
+        <style>html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;font-display:swap}body{margin:0 auto;max-width:1440px}header,section{display:block}h1{font-size:2em;margin:.67em 0}h2{font-size:18px}main{display:block}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:hover,a:focus{text-decoration:underline}img{border-style:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}html{box-sizing:border-box;color:#222;font-size:1em;line-height:1.4;margin:0;padding:0}*,*:before,*:after{box-sizing:inherit}img{vertical-align:middle}body{font-family:'Open Sans',sans-serif;font-size:18px;line-height:1.6;padding:0}img{height:auto;max-width:100%}a{color:#6161ff;text-decoration:none}header{background-color:#fff;padding:4rem}@media only screen and (min-width:720px){header{padding:8rem 4rem}}.section1{margin:0 auto;max-width:720px}header p{font-size:24px}h1{font-family:'Libre Baskerville',Garamond,Times New Roman,serif;font-size:48px;line-height:1.2;margin-top:0}h2{font-family:'Libre Baskerville',Garamond,Times New Roman,serif;font-size:24px}@media only screen and (min-width:720px){h2{font-size:36px}}h3{margin-bottom:0}h4{font-family:'Libre Baskerville',Garamond,Times New Roman,serif;margin-bottom:0}p{margin-top:0}.section2{display:flex;flex-direction:column;margin-bottom:2rem}@media only screen and (min-width:720px){.section2{flex-direction:row;margin-bottom:6rem}}@media only screen and (min-width:720px){.section2 .first,.section2 .second{width:50%}}.section2 .first{background:url(img/photo.jpg) no-repeat;background-position:50% 50%;background-size:cover;min-height:320px}@media only screen and (min-width:720px){.section2 .first{background-size:720px auto}}.section2 .second{padding:1rem 4rem}.section2 .second h4{margin-bottom:1rem}.section3{padding:2rem}.work-grid{list-style:none;margin:0;padding:0}.work-grid li{margin-bottom:6rem}.work-grid img{box-shadow:0 0 20px rgba(0,0,0,.2)}.work-grid p{color:#666;font-size:16px;margin-bottom:0}@media only screen and (min-width:540px){.work-grid{display:flex;flex-wrap:wrap}.work-grid li{margin-bottom:2rem;padding:1rem;width:50%}}@media only screen and (min-width:720px){.work-grid li{width:33.333%}}footer{padding:3rem 1rem 4rem;text-align:center}footer .small{font-size:14px;color:#666}</style>
     </head>
     <body>
         <header>
@@ -38,37 +38,37 @@
                 <h2>Recent Work</h2>
                 <ul class="work-grid">
                     <li>
-                        <img src="img/work7-th.jpg" width="500" height="260" alt="screenshot of The Long Center website">
+                        <img src="img/work7-th.jpg" width="500" height="260" alt="screenshot of The Long Center website" loading="lazy">
                         <h3>The Long Center</h3>
                         <a href="//thelongcenter.org">thelongcenter.org</a>
                         <p>website &mdash; <em>development &amp; animation</em></p>
                     </li>
                     <li>
-                        <img src="img/work1-th.jpg" width="500" height="260" alt="screenshot of The Balega Difference">
+                        <img src="img/work1-th.jpg" width="500" height="260" alt="screenshot of The Balega Difference" loading="lazy">
                         <h3>The Balega Difference</h3>
                         <a href="//balega-socks.implus.com/the-balega-socks-difference">balega-socks.implus.com</a>
                         <p>experiential site &mdash; <em>development &amp; animation</em></p>
                     </li>
                     <li>
-                        <img src="img/work2-th.jpg" width="500" height="260" alt="screenshot of Kestra Financial Advisor Complete">
+                        <img src="img/work2-th.jpg" width="500" height="260" alt="screenshot of Kestra Financial Advisor Complete" loading="lazy">
                         <h3>Kestra Financial Advisor Complete</h3>
                         <a href="img/work2.jpg">view screenshot</a>
                         <p>user interface &mdash; <em>development</em></p>
                     </li>
                     <li>
-                        <img src="img/work3-th.jpg" width="500" height="260" alt="screenshot of Palm Beach Tan website">
+                        <img src="img/work3-th.jpg" width="500" height="260" alt="screenshot of Palm Beach Tan website" loading="lazy">
                         <h3>Palm Beach Tan</h3>
                         <p><a href="//palmbeachtan.com">palmbeachtan.com</a></p>
                         <p>website &mdash; <em>development</em></p>
                     </li>
                     <li>
-                        <img src="img/work4-th.jpg" width="500" height="260" alt="screenshot of Kestra Financial website">
+                        <img src="img/work4-th.jpg" width="500" height="260" alt="screenshot of Kestra Financial website" loading="lazy">
                         <h3>Kestra Financial</h3>
                         <p><a href="//kestrafinancial.com">kestrafinancial.com</a></p>
                         <p>website &mdash; <em>development</em></p>
                     </li>
                     <li>
-                        <img src="img/work6-th.jpg" width="500" height="260" alt="screenshot of the 2017 2017 World Hardcourt Bike Polo Championship website">
+                        <img src="img/work6-th.jpg" width="500" height="260" alt="screenshot of the 2017 2017 World Hardcourt Bike Polo Championship website" loading="lazy">
                         <h3>2017 World Hardcourt Bike Polo Championship</h3>
                         <p><a href="//whbpc.org">whbpc.org</a></p>
                         <p>website &mdash; <em>design &amp; development</em></p>
