--- a/index.amp.html
+++ b/index.amp.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6161ff">
-        <link rel="preconnect" href="https://fonts.gstatic.com/">
+        <link rel="preconnect" href="https://fonts.googleapis.com/">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700|Open+Sans&display=swap" rel="stylesheet">
         <meta name="msapplication-TileColor" content="#e3551d">
         <meta name="theme-color" content="#ffffff">
