lazy loading images

--- a/index.html
+++ b/index.html
@@ -39,37 +39,37 @@
                 <h2>Recent Work</h2>
                 <ul class="work-grid">
                     <li>
-                        <img src="img/work7-th.jpg" width="500" height="260" alt="screenshot of The Long Center website" loading="lazy">
+                        <img loading="lazy" width="500" height="260" src="img/work7-th.jpg" alt="screenshot of The Long Center website">
                         <h3>The Long Center</h3>
                         <a href="//thelongcenter.org">thelongcenter.org</a>
                         <p>website &mdash; <em>development &amp; animation</em></p>
                     </li>
                     <li>
-                        <img src="img/work1-th.jpg" width="500" height="260" alt="screenshot of The Balega Difference" loading="lazy">
+                        <img loading="lazy" width="500" height="260" src="img/work1-th.jpg" alt="screenshot of The Balega Difference">
                         <h3>The Balega Difference</h3>
                         <a href="//balega-socks.implus.com/the-balega-socks-difference">balega-socks.implus.com</a>
                         <p>experiential site &mdash; <em>development &amp; animation</em></p>
                     </li>
                     <li>
-                        <img src="img/work2-th.jpg" width="500" height="260" alt="screenshot of Kestra Financial Advisor Complete" loading="lazy">
+                        <img loading="lazy" width="500" height="260" src="img/work2-th.jpg" alt="screenshot of Kestra Financial Advisor Complete">
                         <h3>Kestra Financial Advisor Complete</h3>
                         <a href="img/work2.jpg">view screenshot</a>
                         <p>user interface &mdash; <em>development</em></p>
                     </li>
                     <li>
-                        <img src="img/work3-th.jpg" width="500" height="260" alt="screenshot of Palm Beach Tan website" loading="lazy">
+                        <img loading="lazy" width="500" height="260" src="img/work3-th.jpg" alt="screenshot of Palm Beach Tan website">
                         <h3>Palm Beach Tan</h3>
                         <p><a href="//palmbeachtan.com">palmbeachtan.com</a></p>
                         <p>website &mdash; <em>development</em></p>
                     </li>
                     <li>
-                        <img src="img/work4-th.jpg" width="500" height="260" alt="screenshot of Kestra Financial website" loading="lazy">
+                        <img loading="lazy" width="500" height="260" src="img/work4-th.jpg" alt="screenshot of Kestra Financial website">
                         <h3>Kestra Financial</h3>
                         <p><a href="//kestrafinancial.com">kestrafinancial.com</a></p>
                         <p>website &mdash; <em>development</em></p>
                     </li>
                     <li>
-                        <img src="img/work6-th.jpg" width="500" height="260" alt="screenshot of the 2017 2017 World Hardcourt Bike Polo Championship website" loading="lazy">
+                        <img loading="lazy" width="500" height="260" src="img/work6-th.jpg" alt="screenshot of the 2017 2017 World Hardcourt Bike Polo Championship website">
                         <h3>2017 World Hardcourt Bike Polo Championship</h3>
                         <p><a href="//whbpc.org">whbpc.org</a></p>
                         <p>website &mdash; <em>design &amp; development</em></p>
