--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <p><a href="//kestrafinancial.com">kestrafinancial.com</a></p>
                     </li>
                     <li>
-                        <img loading="lazy" width="500" height="260" src="img/work6-th.jpg" alt="screenshot of the 2017 2017 World Hardcourt Bike Polo Championship website">
+                        <img loading="lazy" width="500" height="260" src="img/work6-th.jpg" alt="screenshot of the 2017 World Hardcourt Bike Polo Championship website">
                         <h3>2017 World Hardcourt Bike Polo Championship</h3>
                         <p><a href="//whbpc.org">whbpc.org</a></p>
                     </li>
