--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <picture>
                         <source media="(max-width: 719px)" srcset="./img/me.webp 1x" type="image/webp">
                         <source media="(min-width: 720px)" srcset="./img/me-lg.webp 1x" type="image/webp">
-                        <source media="(max-width: 719px)" srcset="./img/me.jpg 1x" type="image/jpeg">
-                        <source media="(min-width: 720px)" srcset="./img/me-lg.jpg 1x" type="image/jpeg">
+                        <source media="(max-width: 719px)" srcset="./img/me.jpg 1x">
+                        <source media="(min-width: 720px)" srcset="./img/me-lg.jpg 1x">
                         <img src="./img/me.jpg" srcset="me.jpg 1x" alt="me jumping in the air next to a joshua tree">
                     </picture>
                 </div>
