--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Adam Hite | Front-End Developer | Austin, TX</title>
         <meta name="description" content="I am an Austin-based front-end developer who believes in building fast, accessible, and responsive websites.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/css/main.css">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -15,7 +16,6 @@
         <link rel="preconnect" href="https://www.google-analytics.com">
         <meta name="msapplication-TileColor" content="#e3551d">
         <meta name="theme-color" content="#ffffff">
-        <style>html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;font-display:swap}body{margin:0 auto;max-width:1440px}header,section{display:block}h1{font-size:2em;margin:.67em 0}h2{font-size:18px}main{display:block}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:hover,a:focus{text-decoration:underline}img{border-style:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}html{box-sizing:border-box;color:#222;font-size:1em;line-height:1.4;margin:0;padding:0}*,*:before,*:after{box-sizing:inherit}img{vertical-align:middle}body{font-family:'Open Sans',Tahoma,sans-serif;font-size:18px;line-height:1.6;padding:0}img{height:auto;max-width:100%}a{color:#6161ff;text-decoration:none}header{background-color:#fff;padding:4rem}@media only screen and (min-width:720px){header{padding:8rem 4rem}}.section1{margin:0 auto;max-width:720px}header p{font-size:24px}h1{font-family:'Libre Baskerville',Georgia,serif;font-size:48px;line-height:1.2;margin-top:0}h2{font-family:'Libre Baskerville',Georgia,serif;font-size:24px}@media only screen and (min-width:720px){h2{font-size:36px}}h3{margin-bottom:0}h4{font-family:'Libre Baskerville',Georgia,serif;margin-bottom:0}p{margin-top:0}.section2{display:flex;flex-direction:column;margin-bottom:2rem}@media only screen and (min-width:720px){.section2{flex-direction:row;margin-bottom:6rem}}@media only screen and (min-width:720px){.section2 .first,.section2 .second{width:50%}}.section2 .first img{width:100%;height: 100%;max-height:540px;object-fit:cover;object-position:center}@media only screen and (min-width:720px){.section2 .first{background-size:720px auto}}.section2 .second{padding:1rem 4rem}.section2 .second h4{margin-bottom:1rem}.section3{padding:2rem}.work-grid{list-style:none;margin:0;padding:0}.work-grid li{margin-bottom:6rem}.work-grid img{box-shadow:0 0 20px rgba(0,0,0,.2)}.work-grid p{color:#666;font-size:16px;margin-bottom:0}@media only screen and (min-width:540px){.work-grid{display:flex;flex-wrap:wrap}.work-grid li{margin-bottom:2rem;padding:1rem;width:50%}}@media only screen and (min-width:720px){.work-grid li{width:33.333%}}footer{padding:3rem 1rem 4rem;text-align:center}footer .small{font-size:14px;color:#666}</style>
     </head>
     <body>
         <header>
@@ -37,8 +37,8 @@
                 </div>
                 <div class="second">
                     <h2>Hey Y'all!</h2>
-                    <p>I work as a lead digital developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through a decade of professional experience in development and&nbsp;design.</p>
-                    <p>I understand the importance of a fast website or web application that performs well on whatever device/screen size. I am aware of my privilege of having access to high-speed internet and powerful devices to access the web and strive to make everything that I build accessible to those who don't.</p>
+                    <p>I work as a lead front-end developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through a decade of professional experience in development and&nbsp;design.</p>
+                    <p>I am most passionate about accessibility and performance. I strive to build products that run on renewable energy, use the least amount of resources, are accessible to all, allow users to control their data, are honest and don't exploit, support an economy that helps people and the planet, and will function when users need them most.</p>
                     <p>In my free time I enjoy exploring the wilderness, competing in bike polo tournaments, roasting coffee and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a>.</p>
                 </div>
             </section>
@@ -48,43 +48,78 @@
                     <li>
                         <img loading="lazy" width="500" height="260" src="img/work7-th.jpg" alt="screenshot of The Long Center website">
                         <h3>The Long Center</h3>
-                        <a href="//thelongcenter.org">thelongcenter.org</a>
+                        <a href="//thelongcenter.org">https://thelongcenter.org</a>
+                        <ul>
+                            <li>HTML/PHP</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                            <li>Animations (GSAP)</li>
+                            <li>CMS Integration (Wordpress)</li>
+                        </ul>
                     </li>
                     <li>
                         <img loading="lazy" width="500" height="260" src="img/work1-th.jpg" alt="screenshot of The Balega Difference">
                         <h3>The Balega Difference</h3>
-                        <a href="//balega-socks.implus.com/the-balega-socks-difference">balega-socks.implus.com</a>
-                    </li>
-                    <li>
-                        <img loading="lazy" width="500" height="260" src="img/work2-th.jpg" alt="screenshot of Kestra Financial Advisor Complete">
-                        <h3>Kestra Financial Advisor Complete</h3>
-                        <a href="img/work2.jpg">view screenshot</a>
+                        <a href="//balega-socks.implus.com/the-balega-socks-difference">https://balega-socks.implus.com</a>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                            <li>Animations (GSAP)</li>
+                        </ul>
                     </li>
                     <li>
                         <img loading="lazy" width="500" height="260" src="img/work3-th.jpg" alt="screenshot of Palm Beach Tan website">
                         <h3>Palm Beach Tan</h3>
-                        <p><a href="//palmbeachtan.com">palmbeachtan.com</a></p>
+                        <p><a href="//palmbeachtan.com">https://palmbeachtan.com</a></p>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                            <li>CMS Integration</li>
+                        </ul>
                     </li>
                     <li>
                         <img loading="lazy" width="500" height="260" src="img/work4-th.jpg" alt="screenshot of Kestra Financial website">
                         <h3>Kestra Financial</h3>
-                        <p><a href="//kestrafinancial.com">kestrafinancial.com</a></p>
+                        <p><a href="//kestrafinancial.com">https://kestrafinancial.com</a></p>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                            <li>Animations</li>
+                            <li>CMS Integration (Sitecore)</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <img loading="lazy" width="500" height="260" src="img/work2-th.jpg" alt="screenshot of Kestra Financial Advisor Complete">
+                        <h3>Advisor Complete by Kestra Financial</h3>
+                        <a href="img/work2.jpg">view screenshot</a>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                        </ul>
                     </li>
                     <li>
                         <img loading="lazy" width="500" height="260" src="img/work6-th.jpg" alt="screenshot of the 2017 World Hardcourt Bike Polo Championship website">
                         <h3>2017 World Hardcourt Bike Polo Championship</h3>
-                        <p><a href="//whbpc.org">whbpc.org</a></p>
+                        <p><a href="//whbpc.org">http://whbpc.org</a></p>
+                        <ul>
+                            <li>Design</li>
+                            <li>HTML/PHP</li>
+                            <li>CSS</li>
+                            <li>CMS Integration (Wordpress)</li>
+                        </ul>
                     </li>
                 </ul>
             </section>
         </main>
         <footer>
-            <p class="footer-links"><a href="//dropbox.com/s/ozsc9q3sf3kul7x/resume-2019.pdf?dl=0">Resume</a> | <a href="//linkedin.com/in/adam-hite">LinkedIn</a></p>
-            <p class="small">Copyright &copy;2019 Adam Hite</p>
+            <p class="footer-links"><a href="/resume.html">Resume</a> | <a href="//linkedin.com/in/adam-hite">LinkedIn</a></p>
+            <p class="small">Copyright &copy;2020 Adam Hite</p>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script>WebFont.load({google: {families: ['Libre Baskerville', 'Open Sans']}});</script>
-        <script>window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;ga('create','UA-115746549-1','auto');ga('send','pageview')</script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
 </html>
