--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
                         </ul>
                     </li>
                     <li>
+                        <img loading="lazy" width="500" height="260" src="img/work6-th.jpg" alt="screenshot of the 2017 World Hardcourt Bike Polo Championship website">
+                        <h3>2017 World Hardcourt Bike Polo Championship</h3>
+                        <p><a href="//nahardcourt.com/whbpc">http://whbpc.org</a></p>
+                        <ul>
+                            <li>Design</li>
+                            <li>HTML/PHP</li>
+                            <li>CSS</li>
+                            <li>CMS Integration (Wordpress)</li>
+                        </ul>
+                    </li>
+                    <li>
                         <img loading="lazy" width="500" height="260" src="img/work2-th.jpg" alt="screenshot of Kestra Financial Advisor Complete">
                         <h3>Advisor Complete by Kestra Financial</h3>
                         <a href="img/work2.jpg">view screenshot</a>
@@ -99,17 +110,6 @@
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>Javascript</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <img loading="lazy" width="500" height="260" src="img/work6-th.jpg" alt="screenshot of the 2017 World Hardcourt Bike Polo Championship website">
-                        <h3>2017 World Hardcourt Bike Polo Championship</h3>
-                        <p><a href="//whbpc.org">http://whbpc.org</a></p>
-                        <ul>
-                            <li>Design</li>
-                            <li>HTML/PHP</li>
-                            <li>CSS</li>
-                            <li>CMS Integration (Wordpress)</li>
                         </ul>
                     </li>
                 </ul>
