--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,10 @@
                 <section class="name flow">
                     <h1>Adam Hite</h1>
                     <h2>Senior Front-End Developer</h2>
-                    <p><a href="mailto:&#097;&#100;&#097;&#109;&#099;&#104;&#114;&#105;&#115;&#116;&#111;&#112;&#104;&#101;&#114;&#104;&#105;&#116;&#101;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#097;&#100;&#097;&#109;&#099;&#104;&#114;&#105;&#115;&#116;&#111;&#112;&#104;&#101;&#114;&#104;&#105;&#116;&#101;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a></p>
+                    <p>
+                        <a href="mailto:&#097;&#100;&#097;&#109;&#099;&#104;&#114;&#105;&#115;&#116;&#111;&#112;&#104;&#101;&#114;&#104;&#105;&#116;&#101;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#097;&#100;&#097;&#109;&#099;&#104;&#114;&#105;&#115;&#116;&#111;&#112;&#104;&#101;&#114;&#104;&#105;&#116;&#101;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a><br>
+                        <a href="//adam-hite.github.io">https://adam-hite.github.io</a>
+                    </p>
                 </section>
                 <section class="about flow">
                     <h3>About</h3>
