--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
                 </section>
                 <section class="skills flow">
                     <h3>Skills</h3>
-                    <p>HTML / CSS (Sass, Less, PostCSS) / Javascript / accessibility / responsive design, performance / SVG / animation (GSAP, CSS) / UX design / build tools (gulp, webpack) / cross-browser testing &amp; debugging / Git / content management systems (Wordpress, Sitecore, Sitefinity, Drupal, Shopify) / SEO / PHP / design tools (Adobe Creative Suite / Sketch) / good communication skills / empathy</p>
+                    <p>HTML / CSS (Sass, Less, PostCSS) / Javascript / accessibility / responsive design / performance / SVG / animation (GSAP, CSS) / UX design / build tools (gulp, webpack) / cross-browser testing &amp; debugging / Git / content management systems (Wordpress, Sitecore, Sitefinity, Drupal, Shopify) / SEO / PHP / design tools (Adobe Creative Suite, Sketch) / good communication skills / empathy</p>
                 </section>
                 <section class="work flow">
                     <h3>Experience</h3>
