--- a/resume.html
+++ b/resume.html
@@ -47,10 +47,10 @@
                             <h4><strong><a href="//archermalmo.com">Archer Malmo</a></strong>, Austin, TX — <em>Senior Front-End Developer</em></h4>
                             <span class="resume--date">JANUARY 2016—PRESENT</span>
                             <ul>
-                                <li>Leading and managing front-end development team</li>
-                                <li>Facilitating collaboration between design and engineering.</li>
-                                <li>Improving efficiencies and collaboration throughout the team and across offices</li>
-                                <li>Bringing to life projects such as websites, e-commerce sites, web applications, user interfaces, experiential sites, and more</li>
+                                <li>Leading and managing front-end development team and mentoring developers</li>
+                                <li>Facilitating collaboration between design and engineering</li>
+                                <li>Improving efficiencies and collaboration throughout the team across offices</li>
+                                <li>Bringing to life products such as websites, e-commerce sites, web applications, user interfaces, experiential sites, interactive banners, and more</li>
                                 <li>Working with clients such as Implus, Hanger Clinic, Kestra Financial, Dell, and Smile Doctors</li>
                             </ul>
                         </li>
@@ -58,7 +58,7 @@
                             <h4><strong><a href="//archermalmo.com">Archer Malmo</a></strong>, Memphis, TN — <em>Digital Developer & Mobile Lead</em></h4>
                             <span class="resume--date">FEBRUARY 2012-JANUARY 2016</span>
                             <ul>
-                                <li>Lead the effort towards a mobile-first approach and pushed for a stronger focus on performance</li>
+                                <li>Lead the effort towards a mobile-first approach and a stronger focus on performance</li>
                                 <li>Managed and mentored a team of developers</li>
                                 <li>Worked with clients such as FedEx, Pfizer-Zoetis, Palm Beach Tan, JuicePlus, and Evergreen Packaging</li>
                             </ul>
@@ -81,8 +81,8 @@
                 <section class="community flow">
                     <h3>Community</h3>
                     <ul>
-                        <li><a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a><em>(secretary)</em></li>
-                        <li><a href="//foodnotbombs.net">Food Not Bombs</a><em>(organizer)</em></li>
+                        <li><a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a> - <em>Board Member (Secretary)</em></li>
+                        <li><a href="//foodnotbombs.net">Food Not Bombs</a></li>
                         <li><a href="//treefolks.org">Tree Folks</a></li>
                         <li><a href="//insidebooksproject.org">Inside Books Project</a></li>
                         <li><a href="//girlswhocode.com">Girls Who Code</a></li>
