--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,9 @@
                 </section>
             </article>
         </main>
-        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script>WebFont.load({google: {families: ['Libre Baskerville', 'Open Sans']}});</script>
+        <footer>
+            <p class="footer-links"><a href="/resume.html">Resume</a> | <a href="//linkedin.com/in/adam-hite">LinkedIn</a></p>
+            <p class="small">Copyright ©2020 Adam Hite</p>
+        </footer>
     </body>
 </html>
